fix newsletter style on mobile

--- a/src/components/NewsletterForm/_newsletter-form.scss
+++ b/src/components/NewsletterForm/_newsletter-form.scss
@@ -5,10 +5,8 @@ $color-hover: #08519a;
 .tco-newsletter-form {
   position: relative;
   z-index: 2;
-  display: inline-flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: space-between;
+  display: flex;
+  flex-flow: column nowrap;
   overflow: hidden;
   padding: $spacing-stack-32 $spacing-inline-40;
   border: $border-card;
@@ -39,11 +37,6 @@ $color-hover: #08519a;
     @include wider-than($breakpoint-laptop) {
       margin-bottom: 0;
     }
-  }
-
-  &-content,
-  &-disclaimer {
-    max-width: 400px;
   }
 
   &-container {
