--- a/src/styles/global/_forms.scss
+++ b/src/styles/global/_forms.scss
@@ -439,7 +439,7 @@ $color-hover: #08519a;
   &.tco-newsletter-form-container {
     .hs-form {
       display: flex;
-      flex-flow: row wrap;
+      flex-flow: column nowrap;
 
       @include wider-than($breakpoint-tablet-portrait) {
         flex-flow: row nowrap;
